Adding Comparable, Comparator and Threads