@@ -12,6 +12,7 @@ public class LinkedListDemo {
 	        list.add("Java");
 	        list.add("Python");
 	        list.add("C++");
+	        list.add("PHP");
 
 	        // Print list
 	        System.out.println("LinkedList: " + list);
@@ -21,7 +22,18 @@ public class LinkedListDemo {
 	        System.out.println("After removal: " + list);
 
 	        // Access an element
-	        System.out.println("First Element: " + list.get(0));
+	        System.out.println("Accessing Element: " + list.get(1));
+	        
+	        //Access first element
+	        System.out.println("First Element: " + list.getFirst());
+	        
+	        //Access last element
+	        System.out.println("Last Element: " + list.getLast());
+	        
+	        list.removeFirst();
+	        System.out.println("After removal: " + list);
+	        
+	        
 
 	}
 
